Fix FileConfigurationTest for Windows
The test wrongly assumes that Class.getResource(..) needs to specify the
System line-separator. The contract for the method dictates:

    "If the name begins with a '/' ('\u002f'), then the absolute name of
     the resource is the portion of the name following the '/'."

Also, it manipulates File.getAbsolutePath() in a way that generates wrong
URL for Windows.